syntax= "proto3";

option go_package= "github.com/flydevs/chat-app-api/users-api/src/clients/rpc/users";

package flydev_chat_app_users;

service UsersProtoInterface{

    rpc GetUserByUuid(MultipleUuids) returns (UserMsgResponse) {}

    rpc Ping(Empty) returns (UserResponse) {}
}

message UserResponse{
    repeated User users =1;
}


message Empty {
}

message Uuid {
    string uuid =1;
}

message MultipleUuids {
    repeated Uuid uuids =1;
}

message User{
    int64 id =1;
    Uuid uuid =2;
    string login_user =3;
    string login_password =4;
}

message UserProfile {
    Uuid uuid= 1;
    bool active= 2;
    string phone = 3;
    string first_name= 4;
    string last_name= 5;
    string user_name= 6;
    string description= 7;
    string avatar_url= 8;
    string created_at =9;
}

message RegisterUser{
    User login_info =1;
    UserProfile profile_info= 2;
}


message Svr_msg{
    int32 status=1;
    string message=2;
}

message UserMsgResponse{
    repeated User users =1;
    Svr_msg msg =2;
}

message UserProfileMsgResponse{
    repeated UserProfile user =1;
    Svr_msg msg =2;
}

message UserProfileUuid{
    Uuid uuid =1;
    UserProfile user =2;
}

message UpdateUserRequest{
    UserProfileUuid content = 1;
    bool partial=2;
}

message UpdateActiveRequest{
    Uuid uuid=1;
    bool active =2;
}

message SearchContactRequest{
    string query =1;
}